# skyscope

./: .bazelrc  .gitignore  BUILD.bazel  Example.hs  Main.hs  Main.js  README.md  Sqlite.hs  WORKSPACE  WORKSPACE.bazel  demo.sh  entrypoint.sh  flake.nix  fourmolu.yaml  ghcid.sh  import-process-tree.sh  nix-store-to-graphviz.sh  nixpkgs.json  nixpkgs.nix  package.bzl  packages.dhall  shell.nix  sigsegv-notes.txt  stackage_snapshot.json  static-nixpkgs.nix  theme.json
.github/workflows/: ci.yml
backend/: BUILD.bazel  sqlite.BUILD.bazel  zlib.BUILD.bazel
backend/src/: Common.hs  Diff.hs  Import.hs  Main.hs  Model.hs  Query.hs  Render.hs  Server.hs  Sqlite.hs  filter.sql  import.cpp  path.c  path.cpp  path.h  schema.sql
frontend/: BUILD.bazel  purescript.bzl  spago.dhall  theme.json
frontend/src/: Main.js  Main.purs  format.js  index.js  main.js  style.css  theme.css
release/: BUILD.bazel  alias.BUILD.bazel  entrypoint.sh  import.sh  loader.bzl  package.bzl  platform.BUILD.bazel  release.BUILD.bazel  repository.bzl  server.sh
src/: Main.hs  main.js  style.css  theme.css
