load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier", "buildifier_test")
load("//release:loader.bzl", "entrypoint", "ld_binary")

entrypoint(
    name = "import",
    src = "//release:import.sh",
    binary = "//backend:skyscope",
    includes = ["//release:server.sh"],
)

entrypoint(
    name = "server",
    src = "//release:server.sh",
    binary = "//backend:skyscope",
)

buildifier(
    name = "buildifier",
)

buildifier_test(
    name = "buildifier_test",
    srcs = glob([
        "**/*.bazel",
        "**/*.bzl",
    ]),
)
