workspace(name = "skyscope")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "io_tweag_rules_nixpkgs",
    sha256 = "9ba9d8196b8d08db273228088527b3404f4ca07d869c362033d0e86b83ea4d3d",
    strip_prefix = "rules_nixpkgs-flake-lock-support",
    urls = ["https://github.com/tweag/rules_nixpkgs/archive/flake-lock-support.tar.gz"],
)

load("@io_tweag_rules_nixpkgs//nixpkgs:repositories.bzl", "rules_nixpkgs_dependencies")
rules_nixpkgs_dependencies()

http_archive(
    name = "rules_haskell",
    sha256 = "2a07b55c30e526c07138c717b0343a07649e27008a873f2508ffab3074f3d4f3",
    strip_prefix = "rules_haskell-0.16",
    url = "https://github.com/tweag/rules_haskell/archive/refs/tags/v0.16.tar.gz",
)

load("@rules_haskell//haskell:repositories.bzl", "rules_haskell_dependencies")
rules_haskell_dependencies()

load("@rules_haskell//haskell:cabal.bzl", "stack_snapshot")

stack_snapshot(
    name = "stackage",
    snapshot = "lts-19.33",
    stack_snapshot_json = "//:stackage_snapshot.json",
    extra_deps = {
      "zlib": ["@zlib.dev//:zlib"],
    },
    packages = [
        "HList-0.5.2.0",
        "aeson",
        "attoparsec",
        "bytestring",
        "byteunits-0.4.0.3",
        "containers",
        "cryptohash-sha256",
        "direct-sqlite",
        "directory",
        "file-embed",
        "filemanip",
        "hdaemonize-0.5.6",
        "http-types",
        "mtl",
        "process",
        "process-extras",
        "scotty",
        "stm",
        "template-haskell",
        "text",
        "time",
        "transformers",
        "unix",
        "uuid",
        "wai",
        "warp",
        "zlib",
    ],
    components = {
        "attoparsec": [
            "lib:attoparsec",
            "lib:attoparsec-internal",
        ],
    },
    components_dependencies = {
        "attoparsec": """{"lib:attoparsec": ["lib:attoparsec-internal"]}""",
    },
)

load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_git_repository")

load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_cc_configure")

nixpkgs_cc_configure(repository = "@nixpkgs")

load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_python_configure")

nixpkgs_python_configure(repository = "@nixpkgs")

load("@rules_haskell//haskell:nixpkgs.bzl", "haskell_register_ghc_nixpkgs")

haskell_register_ghc_nixpkgs(
    repository = "@nixpkgs",
    attribute_path = "ghc",
    version = "9.0.2",
)

load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_package")

nixpkgs_package(
    name = "nixpkgs_zlib",
    attribute_path = "zlib",
    repository = "@nixpkgs",
)

nixpkgs_package(
    name = "zlib.dev",
    build_file = "//backend:zlib.BUILD.bazel",
    repository = "@nixpkgs",
)

load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_local_repository")

nixpkgs_local_repository(
    name = "nixpkgs",
    nix_flake_lock_file = "//:flake.lock",
)

nixpkgs_package(
    name = "spago",
    build_file_content = "exports_files([\"bin/spago\"])",
    repository = "@nixpkgs",
)

