workspace(name = "skyscope")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "io_tweag_rules_nixpkgs",
    sha256 = "9e3898a33c5f21f634aa9e2d45620e7c4b6d54d16d473571a891193bbd4725ca",
    strip_prefix = "rules_nixpkgs-0c1f8f5470c7f292b7620762e224f53d837929d3",
    urls = ["https://github.com/tweag/rules_nixpkgs/archive/0c1f8f5470c7f292b7620762e224f53d837929d3.tar.gz"],
)

load("@io_tweag_rules_nixpkgs//nixpkgs:repositories.bzl", "rules_nixpkgs_dependencies")

rules_nixpkgs_dependencies()

http_archive(
    name = "rules_haskell",
    sha256 = "2a07b55c30e526c07138c717b0343a07649e27008a873f2508ffab3074f3d4f3",
    strip_prefix = "rules_haskell-0.16",
    url = "https://github.com/tweag/rules_haskell/archive/refs/tags/v0.16.tar.gz",
)

load("@rules_haskell//haskell:repositories.bzl", "rules_haskell_dependencies")

rules_haskell_dependencies()

load("@rules_haskell//haskell:cabal.bzl", "stack_snapshot")

stack_snapshot(
    name = "stackage",
    components = {
        "attoparsec": [
            "lib:attoparsec",
            "lib:attoparsec-internal",
        ],
    },
    components_dependencies = {
        "attoparsec": """{"lib:attoparsec": ["lib:attoparsec-internal"]}""",
    },
    extra_deps = {
        "zlib": ["@zlib.dev//:zlib"],
    },
    packages = [
        "HList-0.5.2.0",
        "aeson",
        "attoparsec",
        "bytestring",
        "byteunits-0.4.0.3",
        "containers",
        "cryptohash-sha256",
        "direct-sqlite",
        "directory",
        "file-embed",
        "filemanip",
        "hdaemonize-0.5.6",
        "http-types",
        "mtl",
        "process",
        "process-extras",
        "scotty",
        "stm",
        "template-haskell",
        "text",
        "time",
        "transformers",
        "unix",
        "uuid",
        "wai",
        "warp",
        "zlib",
    ],
    snapshot = "lts-19.33",
    stack_snapshot_json = "//:stackage_snapshot.json",
)

load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_git_repository")
load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_cc_configure")

static_nixopts = ["--builders", "@/etc/nix/machines", "-j0"]

nixpkgs_cc_configure(
    repository = "@static-nixpkgs",
    nixopts = static_nixopts,
)

load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_python_configure")

nixpkgs_python_configure(repository = "@nixpkgs")

load("@rules_haskell//haskell:nixpkgs.bzl", "haskell_register_ghc_nixpkgs")

haskell_register_ghc_nixpkgs(
    attribute_path = "",
    nix_file_content = """\
with import <nixpkgs> { config = {}; overlays = []; };
haskell.compiler.ghc902.override {
  enableRelocatedStaticLibs = true;
  enableShared = false;
}
""",
    repository = "@static-nixpkgs",
    nixopts = static_nixopts,
    version = "9.0.2",
    static_runtime = True,
    fully_static_link = True,
)

load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_package")

nixpkgs_package(
    name = "nixpkgs_zlib",
    attribute_path = "zlib.static",
    repository = "@static-nixpkgs",
    nixopts = static_nixopts,
)

nixpkgs_package(
    name = "zlib.dev",
    build_file = "//backend:zlib.BUILD.bazel",
    repository = "@nixpkgs",
)

nixpkgs_package(
    name = "sqlite.dev",
    build_file = "//backend:sqlite.BUILD.bazel",
    nix_file_content = """
        let pkgs = import <nixpkgs> { };
        in pkgs.buildEnv {
          name = "sqlite";
          paths = [ pkgs.sqlite.dev pkgs.sqlite.out ];
        }
    """,
    repository = "@nixpkgs",
)

load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_local_repository")

nixpkgs_local_repository(
    name = "nixpkgs",
    nix_flake_lock_file = "//:flake.lock",
)

nixpkgs_local_repository(
    name = "static-nixpkgs",
    nix_file = "//:static-nixpkgs.nix",
    nix_file_deps = ["//:flake.lock"],
)

nixpkgs_package(
    name = "esbuild",
    repository = "@nixpkgs",
)

nixpkgs_package(
    name = "purescript",
    repository = "@nixpkgs",
)

nixpkgs_package(
    name = "spago",
    repository = "@nixpkgs",
)

nixpkgs_package(
    name = "jq.bin",
    repository = "@nixpkgs",
)

load("//frontend:purescript.bzl", "spago_packages")

spago_packages(
    name = "spago_packages",
    config = "//frontend:spago.dhall",
    package_set = "//frontend:packages.dhall",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# buildifier is written in Go and hence needs rules_go to be built.
# See https://github.com/bazelbuild/rules_go for the up to date setup instructions.
http_archive(
    name = "io_bazel_rules_go",
    sha256 = "d6b2513456fe2229811da7eb67a444be7785f5323c6708b38d851d2b51e54d83",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v0.30.0/rules_go-v0.30.0.zip",
        "https://github.com/bazelbuild/rules_go/releases/download/v0.30.0/rules_go-v0.30.0.zip",
    ],
)

load("@io_bazel_rules_go//go:deps.bzl", "go_rules_dependencies")

go_rules_dependencies()

load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains")

go_register_toolchains(version = "1.17.2")

http_archive(
    name = "bazel_gazelle",
    sha256 = "de69a09dc70417580aabf20a28619bb3ef60d038470c7cf8442fafcf627c21cb",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-gazelle/releases/download/v0.24.0/bazel-gazelle-v0.24.0.tar.gz",
        "https://github.com/bazelbuild/bazel-gazelle/releases/download/v0.24.0/bazel-gazelle-v0.24.0.tar.gz",
    ],
)

load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies")

# If you use WORKSPACE.bazel, use the following line instead of the bare gazelle_dependencies():
# gazelle_dependencies(go_repository_default_config = "@//:WORKSPACE.bazel")
gazelle_dependencies()

http_archive(
    name = "com_google_protobuf",
    sha256 = "3bd7828aa5af4b13b99c191e8b1e884ebfa9ad371b0ce264605d347f135d2568",
    strip_prefix = "protobuf-3.19.4",
    urls = [
        "https://github.com/protocolbuffers/protobuf/archive/v3.19.4.tar.gz",
    ],
)

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

http_archive(
    name = "com_github_bazelbuild_buildtools",
    sha256 = "ae34c344514e08c23e90da0e2d6cb700fcd28e80c02e23e4d5715dddcb42f7b3",
    strip_prefix = "buildtools-4.2.2",
    urls = [
        "https://github.com/bazelbuild/buildtools/archive/refs/tags/4.2.2.tar.gz",
    ],
)

nixpkgs_package(
    name = "glibc.bin",
    repository = "@nixpkgs",
)

nixpkgs_package(
    name = "bintools-unwrapped",
    repository = "@nixpkgs",
)

nixpkgs_package(
    name = "clang_11",
    repository = "@nixpkgs",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_pkg",
    sha256 = "8c20f74bca25d2d442b327ae26768c02cf3c99e93fad0381f32be9aab1967675",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_pkg/releases/download/0.8.1/rules_pkg-0.8.1.tar.gz",
        "https://github.com/bazelbuild/rules_pkg/releases/download/0.8.1/rules_pkg-0.8.1.tar.gz",
    ],
)

load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")

rules_pkg_dependencies()

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_skylib",
    sha256 = "b8a1527901774180afc798aeb28c4634bdccf19c4d98e7bdd1ce79d1fe9aaad7",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.4.1/bazel-skylib-1.4.1.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.4.1/bazel-skylib-1.4.1.tar.gz",
    ],
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()
