load("@rules_haskell//haskell:defs.bzl", "haskell_binary", "haskell_toolchain_library")

haskell_toolchain_library(name = "base")

haskell_binary(
    name = "skyscope",
    srcs = [
        ":src/Common.hs",
        ":src/Import.hs",
        ":src/Main.hs",
        ":src/Model.hs",
        ":src/Query.hs",
        ":src/Render.hs",
        ":src/Server.hs",
        ":src/Sqlite.hs",
    ],
    extra_srcs = [
        "//frontend:main.js",
        "//frontend:src/index.js",
        "//frontend:src/format.js",
        "//frontend:src/theme.css",
        "//backend:src/schema.sql",
    ],
    ghcopts = [
        "-O2",
        "-Wall",
        "-Werror",
        "-Wno-name-shadowing",
        "-fno-omit-yields",
        "-fobject-code",
        "-threaded",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":base",
        ":import",
        ":path",
        "@stackage//:HList",
        "@stackage//:aeson",
        "@stackage//:attoparsec",
        "@stackage//:bytestring",
        "@stackage//:byteunits",
        "@stackage//:containers",
        "@stackage//:cryptohash-sha256",
        "@stackage//:direct-sqlite",
        "@stackage//:directory",
        "@stackage//:file-embed",
        "@stackage//:filemanip",
        "@stackage//:hdaemonize",
        "@stackage//:http-types",
        "@stackage//:mtl",
        "@stackage//:process",
        "@stackage//:process-extras",
        "@stackage//:scotty",
        "@stackage//:stm",
        "@stackage//:template-haskell",
        "@stackage//:text",
        "@stackage//:time",
        "@stackage//:transformers",
        "@stackage//:unix",
        "@stackage//:uuid",
        "@stackage//:wai",
        "@stackage//:warp",
        "@stackage//:zlib",
    ],
)

copts = [
    "-O2",
    "-Wall",
    "-Werror",
    "-std=c++20",
]

cc_library(
    name = "path",
    srcs = [":src/path.cpp"],
    copts = copts,
)

cc_library(
    name = "import",
    srcs = [":src/import.cpp"],
    copts = copts,
    linkstatic = True,
    deps = ["@sqlite.dev"],
)
