load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "include",
    srcs = glob(["include/*.h"]),
    visibility = ["//visibility:public"],
)
cc_library(
    name = "zlib",
    srcs = select({
        "@//backend:regular_linking": ["@nixpkgs_zlib//:lib"],
        "@//backend:fully_static_linking": ["@nixpkgs_zlib.static//:lib"],
    }),
    hdrs = [":include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
