exports_files([
    "src/index.js",
    "src/format.js",
    "src/theme.css",
])

genrule(
    name = "bundle",
    srcs = [
        ":spago.dhall",
        ":packages.dhall",
        "@spago_packages//:BUILD.bazel",
    ] + glob(["src/**/*.purs"]) + glob(["src/**/*.js"]),
    outs = ["main.js"],
    cmd = """
        # Resolve labels to absolute paths.
        MAIN_JS="$$(realpath $@)"
        JQ="$$(realpath "$(execpath @jq.bin//:bin/jq)")"
        SPAGO="$$(realpath "$(execpath @spago//:bin/spago)")"
        PATH="$$(dirname $$(realpath "$(execpath @esbuild//:bin/esbuild)")):$$PATH"
        PATH="$$(dirname $$(realpath "$(execpath @purescript//:bin/purs)")):$$PATH"
        PACKAGES="$$(dirname "$$(realpath "$(execpath @spago_packages//:BUILD.bazel)")")"
        mkdir -p "$$(dirname "$$MAIN_JS")"

        # Run spago to build and bundle frontend.
        cd frontend
        tar c -C "$$PACKAGES" .spago output | tar x 1>&2
        RESULT="$$("$$SPAGO" -c skip bundle-app -t "$$MAIN_JS" -u --json-errors)" || true

        # Fail if there were any warnings or errors.
        count() { "$$JQ" ".$$1 | length" <<<"$$RESULT"; }
        if [[ "$$(count warnings)" -ne 0 || "$$(count errors)" -ne 0 ]]; then
            "$$JQ" . <<<"$$RESULT" 1>&2
            exit 1
        fi
    """,
    tools = [
        "@esbuild//:bin/esbuild",
        "@jq.bin//:bin/jq",
        "@purescript//:bin/purs",
        "@spago//:bin/spago",
    ],
    visibility = ["//visibility:public"],
)
