load(":package.bzl", "package_release")

package_release(
    "//backend:skyscope",
    {
        "@platforms//os:linux": "ecb9642dfe63071c4fbf55a424823ff0c30852f3b2d7f79c7c3280f9f2af76e7",
        "@platforms//os:macos": "733e4131264d2b99d1861bbbec7ea0a5bf063b3615e62a12f9800596b082ce6e",
    },
    "https://github.com/tweag/skyscope/releases/download/v0.2.5",
)

exports_files(["entrypoint.sh"])
