load(":package.bzl", "package_release")

package_release(
    "//backend:skyscope",
    {
        "@platforms//os:linux": "7f60d4ba7b7d65be9f5dd18b1e7d5911f42217d2801e2046771f2ec01a862f96",
        "@platforms//os:macos": "4f60f8bef757aad434dc9950f4ea59c6b476ac336aca113700e36d4574721ae4",
    },
    "https://github.com/tweag/skyscope/releases/download/v0.2.6",
)

exports_files(["entrypoint.sh"])
