alias(
    name = "import",
    actual = select({
        "@platforms//os:linux": "@skyscope_linux//:import",
        "@platforms//os:macos": "@skyscope_macos//:import",
    }),
)

alias(
    name = "server",
    actual = select({
        "@platforms//os:linux": "@skyscope_linux//:server",
        "@platforms//os:macos": "@skyscope_macos//:server",
    }),
)
