load(":loader.bzl", "entrypoint", "ld_binary")

entrypoint(
    name = "import",
    src = "import.sh",
    binary = ":skyscope",
    includes = ["server.sh"],
    visibility = ["//visibility:public"],
)

entrypoint(
    name = "server",
    src = "server.sh",
    binary = ":skyscope",
    visibility = ["//visibility:public"],
)

ld_binary(
    name = "skyscope",
    binary = "closure/skyscope",
    libraries = glob(["closure/*.so.*"]),
)
