sh_binary(
    name = "import",
    srcs = ["import.sh"],
    data = glob([
        "bin/skyscope",
        "closure/**",
    ]),
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "server",
    srcs = ["server.sh"],
    data = glob([
        "bin/skyscope",
        "closure/**",
    ]),
    visibility = ["//visibility:public"],
)
